<resources>
    <string name="app_name">Final Project</string>
    <string name="login_title">LOGIN</string>
    <string name="username_hint">Username</string>
    <string name="username_placeholder">Your Username</string>
    <string name="password_hint">Password</string>
    <string name="password_placeholder">Your Password</string>
    <string name="login_button">Continue</string>
    <string name="login_success">Login successful</string>
    <string name="login_error_generic">Unable to log in. Please try again.</string>
    <string name="login_error_empty">Username and password are required.</string>
    <string name="login_signup_prompt">Don\'t have an account?</string>
    <string name="register_title">REGISTER</string>
    <string name="register_button">Create Account</string>
    <string name="register_success">Registration successful</string>
    <string name="register_error_generic">Unable to register. Please try again.</string>
    <string name="register_error_empty">Name and password are required.</string>
    <string name="register_login_prompt">Already have an account? Login</string>
    <string name="home_error_generic">Unable to load games. Please try again.</string>
    <string name="home_empty_state">No games available.</string>
    <string name="home_empty_filter">No results match your search.</string>
    <string name="home_title">Home</string>
    <string name="home_search_hint">Search games...</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_my_games">My Games</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="profile_title">Profile</string>
    <string name="profile_username_placeholder">Username</string>
    <string name="profile_games_reviewed">Games Reviewed</string>
    <string name="profile_logout">Logout</string>
    <string name="developer_label">Developer</string>
    <string name="publisher_label">Published By</string>
    <string name="bookmark">Bookmark</string>
    <string name="audience_score">Audience Score</string>
    <string name="audience_reviews">Audience Reviews</string>
    <string name="game_discussions">Game Discussions</string>
    <string name="rating_peak_label">Absolute Peak</string>
    <string name="not_available">N/A</string>
    <string name="game_title_placeholder">Game Title</string>
    <string name="developer_placeholder">Developer</string>
    <string name="publisher_placeholder">Publisher</string>
    <string name="description_placeholder">Game description goes here.</string>
    <string name="rating_value_placeholder">4.5</string>
    <string name="content_desc_game_cover">Game cover image</string>
    <string name="btn_play">Play</string>
    <string name="btn_like">Like</string>
    <string name="btn_bookmark">Bookmark</string>
    <string name="bottom_sheet_rate">Rate</string>
    <string name="bottom_sheet_add_review">Add Review</string>
    <string name="bottom_sheet_share">Share</string>
    <string name="bottom_sheet_more_by_developer">More by Developer</string>
    <string name="bookmark_success">Bookmarked!</string>
    <string name="bookmark_error">Unable to bookmark right now.</string>
    <string name="like_update_error">Unable to update like right now.</string>
    <string name="missing_user">You need to be logged in.</string>
    <string name="not_rated_yet">Not Rated Yet</string>
    <string name="status_want">Want</string>
    <string name="status_played">Played</string>
    <string name="status_completed">Completed</string>
    <string name="my_games_empty">No games yet.</string>
    <string name="review_back">Back</string>
    <string name="review_submit">Submit</string>
    <string name="review_rate">Rate</string>
    <string name="review_add_review">Add Review...</string>
    <string name="review_submit_success">Review submitted!</string>
    <string name="review_submit_error">Unable to submit review.</string>
    <string name="audience_reviews_empty">No audience reviews yet.</string>
    <string name="unknown_user">Unknown user</string>
    <string name="discussions_empty">No discussions yet.</string>
    <string name="discussion_new_comment">New Comment</string>
    <string name="discussion_reply_hint">Type your reply...</string>
    <string name="discussion_send">Send discussion</string>
    <string name="discussion_reply">Reply</string>
    <string name="discussion_view_replies">View all replies</string>
    <string name="discussion_view_replies_count">View All Replies (%1$d)</string>
    <string name="discussion_empty_error">Please enter a comment</string>
    <string name="discussion_submit_error">Unable to submit discussion.</string>
    <string name="replying_to">Replying to %1$s</string>
    <string name="rate_the_game">Rate the game</string>
    <string name="search_filters">Filters</string>
    <string name="search_label_name">Search</string>
    <string name="search_label_tags">Search For Tags</string>
    <string name="search_label_developer">Search For Developer</string>
    <string name="search_name_hint">Name...</string>
    <string name="search_tags_hint">Type tags...</string>
    <string name="search_developer_hint">Type developers...</string>
    <string name="search_rating_any">Any</string>
    <string name="search_results">Results</string>
</resources>
